--- a/framework-css/css/button.css
+++ b/framework-css/css/button.css
@@ -10,10 +10,6 @@
     font: regular 14px Arial, sans-serif;
     color: #FFF;
     cursor: pointer;
-
-    /* -------------------- */
-    /* margin: 6px;     */
-    /* -------------------- */
 }
 
 .btn-pequeno{
@@ -32,6 +28,10 @@
     width: 100%;
     min-height: 52px;
     font-size: 16px;
+}
+
+.ativo{
+    cursor: not-allowed;
 }
 
 .btn-primario {
