--- a/framework-css/css/table.css
+++ b/framework-css/css/table.css
@@ -45,3 +45,27 @@
     background-color: #272b30;
     color: #FFF;
 }
+
+/* MELHORAR ISSO */
+.tabela-zebrada-clara tbody tr:nth-child(odd){
+    background-color: #d9e1eb;
+}
+
+.tabela-zebrada-escura tbody tr:nth-child(odd){
+    background-color: #40464e;
+}
+/* ------------ */
+
+.com-bordas tr{
+    border: 1px solid #c5ccd4;
+}
+
+.com-bordas tbody tr:last-child{
+    border-bottom: 1px solid #c5ccd4;
+}
+
+.sem-bordas tr{
+    border: none;
+}
+
+
